--- a/personal_notes.org
+++ b/personal_notes.org
@@ -5,10 +5,10 @@
 - design user routes
   1. favorite item controller
   2. unfavorite item controller
-  3. logout controller (use jwt blacklist)
 - create side bar
 - prettify main view
 
 ** Other
 - if have time: refactor signup (insert form data in esj as input values and resend page to client)
 - if have time: refactor login
+- if have time: refactor logout (it's weird hack for a link to call a javascript function...)
