--- a/personal_notes.org
+++ b/personal_notes.org
@@ -3,12 +3,12 @@
 
 * TODOs
 - design user routes
-  1. favorite item controller
-  2. unfavorite item controller
-- create side bar
-- prettify main view
+  1. unfavorite item controller
+- prettify product page
+  - add row gallery at the bottom of product page to display products from the same brand
 
 ** Other
 - if have time: refactor signup (insert form data in esj as input values and resend page to client)
 - if have time: refactor login
 - if have time: refactor logout (it's weird hack for a link to call a javascript function...)
+- if have time: add unfavorite button on product page also
